--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   </head>
   <body>
     <h1>Ashley's Awesome Webpage </h1>
+    <h2> A list of Ashley's favorite things...</h2>
+    <ul>
+      <li> Corgis</li>
+      <li> Tacos</li>
+      <li> First Ave</li>
+      <li> San Diego</li>
+    </ul>
   </body>
 
 </html>
