--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
   <body>
     <h1>Ashley's Awesome Webpage </h1>
     <h2> A list of Ashley's favorite things...</h2>
-    <ul>
+    <ol>
       <li> Corgis</li>
       <li> Tacos</li>
       <li> First Ave</li>
       <li> San Diego</li>
+    </ol>
+    <h2>Mike's favorite things</h2>
+    <ul>
+      <li>Running</li>
+      <li>Game of Thrones</li>
+      <li>Fruit</li>
+      <li>Kirbo</li>
     </ul>
   </body>
 
