--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <title> Ashley's webpage </title>
   </head>
   <body>
+    <main>
     <h1>Ashley's Awesome Webpage </h1>
+      <nav>
+        <ul> 
+         <li>Google</li>
+         <li>Facebook</li>
+         <li>Prime</li>
+      </ul>
+      </nav>
     <h2> A list of Ashley's favorite things...</h2>
     <ol>
       <li> Corgis</li>
@@ -19,6 +27,15 @@
       <li>Fruit</li>
       <li>Kirbo</li>
     </ul>
+      <article>
+        <h3>U2 tour in Minneapolis</h3>
+        <section>Ashley and Mike get first row seats</section>
+        <section>The Edge stops by to say 'hi'.</section>
+      </article>
+  </main> 
+    <footer>
+      All rights reserved for Ashley.  Lost items become property of Ashley.
+    </footer>
   </body>
 
 </html>
