--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <main>
     <h1>Ashley's Awesome Webpage </h1>
+      <link rel="stylesheet" href="styles.css">
       <nav>
         <ul> 
          <li>Google</li>
