--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <link rel="stylesheet" href="styles.css">
       <nav>
         <ul> 
-         <li>Google</li>
-         <li>Facebook</li>
-         <li>Prime</li>
+          <li><a  href="http://www.google.com">Google</a></li>
+          <li><a  href="http://www.facebook.com">Facebook</a></li>
+         <li>  href="http://primeacademy.io">Prime<a/></li>
       </ul>
       </nav>
     <h2> A list of Ashley's favorite things...</h2>
