--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul> 
           <li><a  href="http://www.google.com">Google</a></li>
           <li><a  href="http://www.facebook.com">Facebook</a></li>
-         <li>  href="http://primeacademy.io">Prime<a/></li>
+         <li><a  href="http://primeacademy.io">Prime</a></li>
       </ul>
       </nav>
     <h2> A list of Ashley's favorite things...</h2>
