--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           <li><a  href="http://www.google.com">Google</a></li>
           <li><a  href="http://www.facebook.com">Facebook</a></li>
          <li><a  href="http://primeacademy.io">Prime</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
       </ul>
       </nav>
     <h2> A list of Ashley's favorite things...</h2>
