--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1> This is a gallery!</h1>
-    <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwj-sebz9LHTAhUJxoMKHQs5BpkQjBwIBA&url=http%3A%2F%2Fcdn.akc.org%2Fakcdoglovers%2FPembrokeWelshCorgi_hero.jpg&psig=AFQjCNE8O_yjAKckYTWt0YwfHLV9yDBo6A&ust=1492739117516824">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Welchcorgipembroke.JPG/1200px-Welchcorgipembroke.JPG">
     </body>
     </html>
